# cagey-engine

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
cagey-engine/: CMakeLists.txt
cagey-engine/include/: CMakeLists.txt
cagey-engine/include/cagey/: CMakeLists.txt
cagey-engine/include/cagey/core/: CMakeLists.txt  Engine.hh  Exception.hh  Signal.hh
cagey-engine/include/cagey/input/: Device.hh  Event.hh  IInputSystem.hh  InputManager.hh  InputSystemFactory.hh  Keyboard.hh  Mouse.hh  MouseEvent.hh  Types.hh
cagey-engine/include/cagey/math/: Angle.hh  BaseAngle.hh  BasePoint.hh  CMakeLists.txt  Constants.hh  Degree.hh  MathFwd.hh  Matrix.hh  Point.hh  Radian.hh  Util.hh  Vector.hh
cagey-engine/include/cagey/util/: EnumClassSet.hh  ListenerSet.hh  Signal.hh
cagey-engine/include/cagey/window/: IDisplayConfig.hh  IWindow.hh  VideoMode.hh  Window.hh  WindowFactory.hh  WindowHandle.hh  WindowSystem.hh
cagey-engine/source/: CMakeLists.txt
cagey-engine/source/cagey/: CMakeLists.txt
cagey-engine/source/cagey/input/: CMakeLists.txt  IInputSystem.hh  InputManager.cc  InputSystemFactory.cc  InputSystemFactory.hh  MouseEvent.cc
cagey-engine/source/cagey/input/sdl/: CMakeLists.txt  SdlDeviceFactory.cc  SdlDeviceFactory.hh  SdlInputSystem.cc  SdlInputSystem.hh  SdlKeyboard.cc  SdlKeyboard.hh  SdlMouse.cc  SdlMouse.hh
cagey-engine/source/cagey/input/x11/: CMakeLists.txt  X11InputSystem.cc  X11InputSystem.hh  X11Keyboard.cc  X11Keyboard.hh  X11Mouse.cc  X11Mouse.hh
cagey-engine/source/cagey/window/: IVideoModeImpl.hh  IWindowImpl.hh  VideoMode.cc  VideoModeFactory.cc  VideoModeFactory.hh  Window.cc  WindowFactory.cc  WindowFactory.hh
cagey-engine/source/cagey/window/impl/: WindowImpl.cc  WindowImpl.hh
cagey-engine/source/cagey/window/sdl/: SdlContext.cc  SdlContext.hh  SdlDisplayConfig.cc  SdlDisplayConfig.hh  SdlException.hh  SdlVideoModeImpl.cc  SdlVideoModeImpl.hh  SdlWindow.cc  SdlWindow.hh  SdlWindowImpl.hh
test/: CMakeLists.txt
test/cagey/math/: BaseAngleTest.cc  CMakeLists.txt  ConstantsTest.cc  DegreeTest.cc  MatrixTest.cc  PointTest.cc  VectorTest.cc
test/cagey/window/: DisplayConfigTest.cc  WindowTest.cc
